fix(css): don't show scrollbars on resolved issues

--- a/antora-ui-camel/src/css/release.css
+++ b/antora-ui-camel/src/css/release.css
@@ -1,7 +1,6 @@
 .release dl {
   display: grid;
   grid-template-columns: max-content auto;
-  overflow: scroll;
 }
 
 .release dt {
